--- a/README
+++ b/README
@@ -4,7 +4,7 @@
                                   (SDL)
 
                                 Version 1.2
-			for Maemo-Leste / Droid4k
+			for Maemo-Leste / Droid4
 ---
 http://www.libsdl.org/
 
