--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ![sdl1.2 with opengl->gl4es](http://user-images.githubusercontent.com/51511737/89347219-a50b7f80-d6aa-11ea-9d16-c14323076d76.jpg)
-![Plain sdl1.2 ](http://user-images.githubusercontent.com/51511737/89577390-e6c63280-d830-11ea-9da6-b63dc0680d91.jpg
+![Plain sdl1.2 ](http://user-images.githubusercontent.com/51511737/89577390-e6c63280-d830-11ea-9da6-b63dc0680d91.jpg)
 
                          Simple DirectMedia Layer
 
