--- a/README
+++ b/README
@@ -1,5 +1,6 @@
-![sdl1.2 with opengl->gl4es](screenshots/lgs-ba-arx_libertatis.jpg)
-![Plain sdl1.2 ](screenshots/lgs-aa-openjazz.jpg)
+Getting SDL to play nice on Droid 4
+![sdl1.2 with opengl->gl4es](screenshots/lgs-ba-arx_libertatis.jpg "Arx Libertatis")
+![Plain sdl1.2](screenshots/lgs-aa-openjazz.jpg "OpenJazz")
 
                          Simple DirectMedia Layer
 
